# bored

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  PLAN.md  README.md  bored-cards-backup-2026-04-19.md  docker-compose.test.yml
.cargo/: config.toml
.claude/: settings.local.json  watch-woodpecker.js
.cursor/: mcp.json.example  run-bored-mcp.sh
.cursor/rules/: kanban-card-workflow.mdc  mcp-restart-discipline.mdc  woodpecker-after-push.mdc
.run/: Generate Coverage.run.xml  Run Agent (dev).run.xml  Run Backend.run.xml  Run Dev.run.xml  Run Frontend.run.xml  Test All.run.xml
.woodpecker/: build.yml  deploy.yml  pr-review-prompt.md  pr-review.yml
agent/: Cargo.toml
agent/src/: anthropic.rs  bored.rs  claude_cli.rs  main.rs
authentik/: blueprint.yaml
backend/: Cargo.toml
backend/src/: audit.rs  auth.rs  db.rs  events.rs  main.rs  models.rs  observability.rs  schema.surql
backend/src/routes/: audit.rs  auth.rs  boards.rs  cards.rs  columns.rs  mod.rs
deploy/: backup-prod-mini.sh  docker-compose.yml
e2e/: .dockerignore  docker-compose.test.yml  global-setup.ts  package-lock.json  package.json  playwright.config.ts
e2e/tests/: audit-history-drawer.spec.ts  audit-history.spec.ts  auth.spec.ts  boards.spec.ts  cards.spec.ts  column-count.spec.ts  columns.spec.ts  drag.spec.ts  failing.spec.ts  helpers.ts  iteration-16.spec.ts  sse.spec.ts
frontend/: Cargo.toml  Trunk.toml  index.html  style.css
frontend/src/: api.rs  audit_edit_session.rs  events.rs  main.rs
frontend/src/components/: add_card_modal.rs  board_chooser.rs  card.rs  card_modal.rs  column.rs  confirm_modal.rs  history_panel.rs  markdown.rs  mod.rs  user_badge.rs
frontend/src/pages/: board_view.rs  boards_list.rs  home.rs  mod.rs
mcp/: Cargo.toml
mcp/src/: main.rs  server.rs
scripts/: mcp_smoke_all.py
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/history/: actor.rs  mod.rs  summary.rs  time.rs
