[package]
name = "backend"
version.workspace = true
edition.workspace = true

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
axum = "0.7"
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = { version = "0.23", features = ["ring"] }
tokio = { version = "1", features = ["full"] }
shared = { path = "../shared" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-loki = { version = "0.2", features = ["compat-0-2-1"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "fs"] }
# BroadcastStream wraps a broadcast::Receiver as a futures Stream so we can
# feed it directly into axum's Sse response type.
tokio-stream = { version = "0.1", features = ["sync"] }
# Used in the sse_handler return-type bound (Stream<Item=…>).
futures-util = "0.3"
url = "2"
surrealdb = { version = "2", features = ["kv-mem", "kv-surrealkv"] }
ulid = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
axum-test = "15"
serial_test = "3"
tempfile = "3"
