[package]
name = "frontend"
version.workspace = true
edition.workspace = true

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_router = { version = "=0.7.8" }
shared = { path = "../shared" }
gloo-net = { version = "0.6", features = ["http"] }
serde_json = "1"
wasm-bindgen-futures = "0.4"
