[package]
name = "frontend"
version.workspace = true
edition.workspace = true

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_router = { version = "=0.7.8" }
shared = { path = "../shared" }
gloo-net = { version = "0.6", features = ["http"] }
gloo-timers = { version = "0.3", features = ["futures"] }
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
# EventSource for SSE; DragEvent for drag-and-drop
web-sys = { version = "0.3", features = ["EventSource", "MessageEvent", "DragEvent"] }
