[package]
name = "mcp"
version.workspace = true
edition.workspace = true

[[bin]]
name = "bored-mcp"
path = "src/main.rs"

[dependencies]
# Official Anthropic Rust MCP SDK — "server" enables the server-side
# runtime and "macros" enables #[tool_router] / #[tool] proc-macros.
rmcp = { version = "1.5.0", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["full"] }
# reqwest with JSON support for calling the bored REST API.
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
# Log to stderr so it doesn't corrupt the stdio MCP transport on stdout.
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
